# SecureMR_Samples

./: .gitignore  README.md  settings.gradle
Docker/scripts/: compile.sh  get_onnx_info.py  qnn_to_waterdrop_model_config.py
assets/mnistwild/: mnist.serialized.json  mnist_pipeline.json
base/: base.cmake  main.cpp
base/securemr_utils/: README.md  pipeline.cpp  pipeline.h  serialization.cpp  serialization.h
samples/mnistwild/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle.kts
samples/mnistwild/cpp/: mnistwild.cpp  mnistwild.h  mnistwild_load.cpp
samples/pose/cpp/: pose_detection.cpp
samples/ufo/: build.gradle.kts
samples/ufo/cpp/: face_tracking.cpp
samples/ufo_origin/: build.gradle.kts
samples/ufo_origin/cpp/: face_tracking_raw.cpp
samples/yolo_det/cpp/: yolo_object_detection.cpp
